--- a/viewer/views/video.ejs
+++ b/viewer/views/video.ejs
@@ -59,7 +59,6 @@ function reportProgress(){
 
 </head>
 <body>
-<a href="test.html" target="_blank"><%= title %></a><br>
 <video id="meadow" poster="images/test.jpg">
 	<source src = <%= "movie/" + title + ".mp4" %> type="video/mp4"/>
 		<source src = "meadow.ogv" type="video/ogg"/>
@@ -76,4 +75,5 @@ function reportProgress(){
 <button id="stop">Stop</button>
 <button id="pause">Pause</button>
 </div>
+<a href="/" target="_blank">back to menu</a><br>
 </body>
