--- a/viewer/views/index.ejs
+++ b/viewer/views/index.ejs
@@ -4,8 +4,9 @@
 		<title>Main page</title>
 	</head>
 	<body>
-		<a href="video" target="_blank">video list</a><br>
-		<a href="sql" target="_blank">sql query</a><br>
-		<a href="photo" target="_blank">photo_list</a><br>
+		<a href="video_view?id=test">リンクメッセージ</a>
+		<a href="video_list" target="_blank">video list</a><br>
+		<a href="sql_form"><img src="images/links/1.jpg" width="192" height="108" alt="sql_test"></a>
+		<a href="photo_list" target="_blank">photo_list</a><br>
 	</body>
 </html>
