--- a/viewer/views/index.ejs
+++ b/viewer/views/index.ejs
@@ -9,15 +9,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <style>
-    	li{
+		.navbar-brand a{
     		text-align: center;
-		}
-		a{
-    		text-align: center;
+    		font-size: 5vw;
     		color: white;
-		}
-		.col-lg-6 {
-    		text-align: center;
 		}
 	</style>
 
@@ -27,6 +22,7 @@
 </head>
 
 <body>
+<div class="container">
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark my-3">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -115,6 +111,7 @@
     aaa<br>
     aaa<br>
     aaa<br>
+</div>
 </body>
  
 </html>
