--- a/viewer/views/index.ejs
+++ b/viewer/views/index.ejs
@@ -1,20 +1,56 @@
 <!doctype html>
 <html lang="ja">
- 
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <style>
-		.navbar-brand a{
-    		text-align: center;
-    		font-size: 5vw;
-    		color: white;
-		}
-	</style>
+
+    .container {
+      text-align: center;
+    }
+
+    .collapse {
+      padding-right: 220px;
+    }
+    .nav-item {
+      margin: 0 20px;
+    }
+
+    .timelines {
+      background-color: #253233;
+      border: 2px solid black;
+      border-radius: 8px;
+      box-shadow: 0 0 0 4px white;
+      color: white;
+      margin: 0 10px;
+      width: 33%;
+      text-align: center;
+      word-break : break-all;
+    }
+
+    .tl_inner {
+      background: white;
+      width: 100%;
+      height: 86%;
+      color: black;
+    }
+
+    #contents {
+      display: flex;
+      height: 800px; /*タイムラインの長さに影響 */
+      margin: 50px 0px;
+
+    }
+
+    h2 {
+
+    }
+  </style>
 
 
 
@@ -22,96 +58,53 @@
 </head>
 
 <body>
-<div class="container">
-    <nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark my-3">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
+  <!--  <nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark my-3">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-nav" aria-controls=".navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">Management Window</a>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse justify-content-around">
             <ul class="navbar-nav">
                 <li class="col-lg-8"><a class="col-lg-2" href="sql_form">センサ情報</a></li>
                 <li class="col-lg-8"><a class="col-lg-2" href="video_list">ビデオ一覧</a></li>
                 <li class="col-lg-8"><a class="col-lg-2" href="photo_list">写真一覧</a></li>
             </ul>
         </div>
+    </nav> -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Management Window</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarText">
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link" href="sql_form">センサ情報<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="video_list">ビデオ一覧</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="photo_list">写真一覧</a>
+          </li>
+        </ul>
+
+      </div>
     </nav>
 
-    <div class = "row">
-    	<div class = " col-lg-6">
-    		<h1>
-    			test<br>
-    			block<br>
-    		</h1>
-    	</div>    	
+
+
+    <div class="container">
+    <div id="contents">
+      <div class="timelines"><h2>video</h2><div class="tl_inner">aaaaaaaaaaaaaaaa</div></div>
+      <div class="timelines"><h2>photo</h2><div class="tl_inner">aaaaadwadwadwadwawaaaaaaa</div></div>
+      <div class="timelines"><h2>sql_form</h2><div class="tl_inner">wdawdawdawdaskhgagasfdjgihl;ag</div></div>
     </div>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
-    aaa<br>
 </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </body>
- 
+
 </html>
