--- a/viewer/views/video_list.ejs
+++ b/viewer/views/video_list.ejs
@@ -3,6 +3,24 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<title>Video List Window</title>
 </head>
+<style>
+	li {
+		display: inline-block;
+		margin: 10px 10px;
+		text-align: center;
+	}
+
+	ul {
+		margin: 50px 20px;
+		list-style: none;
+	}
+
+	img{
+		max-width: 180px;
+    	max-height: 240px;
+	}
+
+</style>
 
 <body>
 <script type="text/javascript">
@@ -41,18 +59,27 @@
 	var flag = 0;
 	console.log(json_before);
 	document.write('<ul>');
-	for (i =0, j = json_before.length/2; i < j; i++){
-		document.write('<li class=col-lg-8>');
-		for(x=0;x<2;x++){
+	for (i =0, j = json_before.length; i < j; i++){
+		document.write('<div class = row>');
+		for(x=0;x<4;x++){
 			if(json_before[flag] != 'undefined'){
-				console.log(json_before[x]);
-				document.write('<a href=video_view?id=' + json_before[flag] + '>' + json_before[flag] + '</a><br>');
+				//document.write('<li>');
+				document.write('<div class=col-xs-1>');
+				var json_file = json_before[flag].split('.')[0]
+			//	document.write('<a href=video_view?id=' + json_before[flag] + '>' + json_before[flag] + '</a>');
+			document.write('<a href=video_view?id=' + json_before[flag] + '><img src=images/' + json_file + '.jpg border=0 class=img-fluid><div>'+ json_before[flag] +'</div></a>');
 				flag++;
+				//document.write('</li>');
+				document.write('</div>');
 			}
 		}
-		document.write('</li>');
+		document.write('</div>');
 	}
 	document.write('</ul>');
 </script>
-<a href="/">back to menu</a><br>
+<div class="row">
+	<div class="col-xs-1">
+		<a href="/">back to menu</a><br>
+	</div>
+</div>
 </body>
