--- a/viewer/views/sql_view.ejs
+++ b/viewer/views/sql_view.ejs
@@ -2,6 +2,7 @@
 <head>
 	<title>Watch Video Window</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="shortcut icon" href="/path/favicon.ico">
 	<style>
 		.col div{
 			text-align: center;
@@ -29,7 +30,6 @@
        		</tr>
        	</thead>
        	<tbody>
-
 <script type="text/javascript">
 	/*
 	var test = [<%= title %>];
