--- a/viewer/views/photo_list.ejs
+++ b/viewer/views/photo_list.ejs
@@ -64,7 +64,7 @@
 </style>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.ejs">Management Window</a>
+		<a class="navbar-brand" href="/">Management Window</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 		</button>
