--- a/viewer/views/video_list.ejs
+++ b/viewer/views/video_list.ejs
@@ -4,16 +4,6 @@
 	<title>Video List Window</title>
 </head>
 <style>
-	li {
-		display: inline-block;
-		margin: 10px 10px;
-		text-align: center;
-	}
-
-	ul {
-		margin: 50px 20px;
-		list-style: none;
-	}
 
 	img{
 		max-width: 180px;
@@ -23,9 +13,41 @@
 	.img-fluid{
 		margin: 20px;
 	}
+	.link_txt{
+		margin: 10px;
+	}
+	.collapse {
+      padding-right: 220px;
+    }
+    .nav-item {
+      margin: 0 20px;
+    }
 </style>
 
 <body>
+	<div class="container">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Management Window</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarText">
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link" href="sql_form">センサ情報<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="video_list">ビデオ一覧</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="photo_list">写真一覧</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+
+
 <script type="text/javascript">
 	/*
 	var test = [<%= title %>];
@@ -61,16 +83,15 @@
 	var json_before = result_json.split(',');
 	var flag = 0;
 	console.log(json_before);
-	document.write('<ul>');
 	for (i =0, j = json_before.length; i < j; i++){
 		document.write('<div class = row>');
-		for(x=0;x<4;x++){
+		for(x=0;x<5;x++){
 			if(json_before[flag] != 'undefined'){
 				//document.write('<li>');
 				document.write('<div class=col-xs-1>');
 				var json_file = json_before[flag].split('.')[0]
 			//	document.write('<a href=video_view?id=' + json_before[flag] + '>' + json_before[flag] + '</a>');
-			document.write('<a href=video_view?id=' + json_before[flag] + '><img src=images/' + json_file + '.jpg border=0 class=img-fluid><div>'+ json_before[flag] +'</div></a>');
+			document.write('<a href=video_view?id=' + json_before[flag] + '><img src=images/' + json_file + '.jpg border=0 class=img-fluid><div class=link_txt>'+ json_before[flag] +'</div></a>');
 				flag++;
 				//document.write('</li>');
 				document.write('</div>');
@@ -78,12 +99,12 @@
 		}
 		document.write('</div>');
 	}
-	document.write('</ul>');
 </script>
 <div class="row">
 	<div class="col-xs-1">
 		<br>
 		<a href="/">back to menu</a><br>
 	</div>
+</div>
 </div>
 </body>
